Initial implementation of Amberol
Amberol is a music player, so let's give it a music player UI that
consists of:

- the currently playing song, with title, artist, album, and cover art
- the current position and song duration
- a set of buttons to control playback
- a queue with all the songs loaded up

Amberol should be able to load a single song and put it in the queue,
and it should also be able to go through a directory and load all the
music files it encounters (without recursing).

Amberol goes through the queue automatically, but also has skip
functions to skip to the previous/next song; there's also a repeat mode
control that allows Amberol to repeat the current song or the whole
queue. The queue view can also control the playback by skipping to the
song on activation.

There are still missing bits, here and there; for instance:

- no shuffle
- no indicator in the queue for the currently playing song

And, more importantly, there is no application icon.

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,11 +11,12 @@ gnome.compile_resources('amberol',
 )
 
 conf = configuration_data()
-conf.set_quoted('VERSION', meson.project_version())
+conf.set_quoted('VERSION', '@0@@1@'.format(meson.project_version(), version_suffix))
 conf.set_quoted('GETTEXT_PACKAGE', 'amberol')
 conf.set_quoted('LOCALEDIR', get_option('prefix') / get_option('localedir'))
 conf.set_quoted('PKGDATADIR', pkgdatadir)
 conf.set_quoted('APPLICATION_ID', application_id)
+conf.set_quoted('PROFILE', get_option('profile'))
 
 configure_file(
   input: 'config.rs.in',
@@ -34,7 +35,11 @@ run_command(
 rust_sources = files(
   'application.rs',
   'config.rs',
+  'i18n.rs',
   'main.rs',
+  'player.rs',
+  'queue_row.rs',
+  'song.rs',
   'window.rs',
 )
 
