--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,31 @@
 
 [package]
 name = "amberol"
+authors = ["Emmanuele Bassi <ebassi@gnome.org>"]
 version = "0.1.0"
 edition = "2018"
 
 [dependencies]
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
-gtk = { version = "0.4", package = "gtk4" }
+gtk = { version = "0.4", package = "gtk4", features = ["v4_6"] }
+regex = "1.3.4"
+log = "0.4"
+pretty_env_logger = "0.4"
+lofty = "0.5.3"
+once_cell = "1.10"
+fragile = "1.0"
 
 [dependencies.adw]
 package = "libadwaita"
 version  = "0.1.0"
+
+[dependencies.mpris-player]
+version = "0.6"
+
+[dependencies.gst]
+package = "gstreamer"
+version = "0.18"
+
+[dependencies.gst-player]
+package = "gstreamer-player"
+version = "0.18"
