--- a/src/config.rs.in
+++ b/src/config.rs.in
@@ -6,3 +6,4 @@ pub static GETTEXT_PACKAGE: &str = @GETTEXT_PACKAGE@;
 pub static LOCALEDIR: &str = @LOCALEDIR@;
 pub static PKGDATADIR: &str = @PKGDATADIR@;
 pub static APPLICATION_ID: &str = @APPLICATION_ID@;
+pub static PROFILE: &str = @PROFILE@;
