Generate the profile-appropriate desktop file
The icon name changes depending on the application profile, so we
need to generate the proper desktop file.

--- a/data/io.bassi.Amberol.desktop.in.in
+++ b/data/io.bassi.Amberol.desktop.in.in
@@ -2,11 +2,11 @@
 Name=Amberol
 GenericName=Sound Player
 Exec=amberol
-Icon=io.bassi.Amberol
+Icon=@APPLICATION_ID@
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Music;Audio;AudioVideo;
 Keywords=music;sound;player;media;
 StartupNotify=true
-SingleMainWindow=true
+X-SingleMainWindow=true
 DBusActivatable=true
