--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ lofty = "0.5.3"
 once_cell = "1.10"
 fragile = "1.0"
 palette_extract = "0.1.0"
+image = "0.24.1"
 
 [dependencies.adw]
 package = "libadwaita"
