--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,7 @@ pretty_env_logger = "0.4"
 lofty = "0.5.3"
 once_cell = "1.10"
 fragile = "1.0"
-palette_extract = "0.1.0"
-image = "0.24.1"
+color-thief = "0.2.1"
 
 [dependencies.adw]
 package = "libadwaita"
