Implement gio::Application::open
Allow opening music files from the command line and from the installed
applications list.

--- a/data/io.bassi.Amberol.desktop.in.in
+++ b/data/io.bassi.Amberol.desktop.in.in
@@ -1,7 +1,8 @@
 [Desktop Entry]
 Name=Amberol
 GenericName=Sound Player
-Exec=amberol
+TryExec=amberol
+Exec=amberol %U
 Icon=@APPLICATION_ID@
 Terminal=false
 Type=Application
@@ -10,3 +11,4 @@ Keywords=music;sound;player;media;
 StartupNotify=true
 X-SingleMainWindow=true
 DBusActivatable=true
+MimeType=audio/x-mpegurl;application/x-ogg;application/ogg;application/x-flac;audio/x-flac;audio/x-mp3;audio/x-mpeg;audio/mpeg;
