Begin reorganising the code base
We are going to move all the audio playback code into an internal
`audio` module, in preparation for switching to message passing.

--- a/src/meson.build
+++ b/src/meson.build
@@ -34,12 +34,12 @@ run_command(
 
 rust_sources = files(
   'application.rs',
+  'audio/song.rs',
   'config.rs',
   'i18n.rs',
   'main.rs',
   'player.rs',
   'queue_row.rs',
-  'song.rs',
   'utils.rs',
   'window.rs',
 )
