Add controller for inhibiting suspend while playing
When playing music we want to temporarily disable the ability to suspend
the machine. We can use the Controller trait to implement this.

--- a/src/meson.build
+++ b/src/meson.build
@@ -36,6 +36,7 @@ rust_sources = files(
   'application.rs',
   'audio/controller.rs',
   'audio/gst_backend.rs',
+  'audio/inhibit_controller.rs',
   'audio/mod.rs',
   'audio/mpris_controller.rs',
   'audio/player.rs',
