Add a link to my Ko-Fi
You can help me write Amberol by funding my life goal of turning my
blood into a caffeine transport medium.

--- a/data/io.bassi.Amberol.appdata.xml.in.in
+++ b/data/io.bassi.Amberol.appdata.xml.in.in
@@ -20,6 +20,7 @@
   <launchable type="desktop-id">@APPLICATION_ID@.desktop</launchable>
   <url type="homepage">https://gitlab.gnome.org/ebassi/amberol</url>
   <url type="bugtracker">https://gitlab.gnome.org/ebassi/amberol/-/issues</url>
+  <url type="donation">https://ko-fi.com/emmanueleb</url>
   <developer_name>Emmanuele Bassi</developer_name>
   <update_contact>ebassi_at_gnome.org</update_contact>
   <translation type="gettext">amberol</translation>
