--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ pretty_env_logger = "0.4"
 lofty = "0.5.3"
 once_cell = "1.10"
 color-thief = "0.2.1"
+rand = "0.8.5"
 
 [dependencies.adw]
 package = "libadwaita"
