Add MIME type for "audio/x-vorbis+ogg"
This is the MIME type that GNOME Control Center looks for in order to
assign a default music player.

--- a/data/io.bassi.Amberol.desktop.in.in
+++ b/data/io.bassi.Amberol.desktop.in.in
@@ -11,4 +11,4 @@ Keywords=music;sound;player;media;
 StartupNotify=true
 X-SingleMainWindow=true
 DBusActivatable=true
-MimeType=audio/x-mpegurl;application/x-ogg;application/ogg;application/x-flac;audio/x-flac;audio/x-mp3;audio/x-mpeg;audio/mpeg;
+MimeType=audio/x-mpegurl;application/x-ogg;application/ogg;application/x-flac;audio/x-flac;audio/x-mp3;audio/x-mpeg;audio/mpeg;audio/x-vorbis+ogg;
