--- a/src/meson.build
+++ b/src/meson.build
@@ -49,6 +49,7 @@ rust_sources = files(
   'drag_overlay.rs',
   'i18n.rs',
   'main.rs',
+  'playback_control.rs',
   'queue_row.rs',
   'utils.rs',
   'volume_control.rs',
