--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,23 +8,22 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+color-thief = "0.2.1"
+gdk-pixbuf = "0.15"
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 gtk = { version = "0.4", package = "gtk4", features = ["v4_6"] }
 gtk-macros = "0.3"
-regex = "1.3.4"
-log = "0.4"
-pretty_env_logger = "0.4"
 lofty = "0.6.1"
+log = "0.4"
+mpris-player = "0.6"
 once_cell = "1.10"
-color-thief = "0.2.1"
+pretty_env_logger = "0.4"
 rand = "0.8.5"
+regex = "1.3.4"
 
 [dependencies.adw]
 package = "libadwaita"
 version  = "0.1.0"
-
-[dependencies.mpris-player]
-version = "0.6"
 
 [dependencies.gst]
 package = "gstreamer"
