--- a/data/io.bassi.Amberol.desktop.in.in
+++ b/data/io.bassi.Amberol.desktop.in.in
@@ -1,14 +1,17 @@
 [Desktop Entry]
 Name=Amberol
-GenericName=Sound Player
+GenericName=Music Player
 TryExec=amberol
 Exec=amberol %U
+# Translators: Do NOT translate the Icon name
 Icon=@APPLICATION_ID@
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Music;Audio;AudioVideo;
-Keywords=music;sound;player;media;
+Keywords=music;sound;player;media;audio;playlist;
 StartupNotify=true
 X-SingleMainWindow=true
+# Translators: Do NOT translate or transliterate this text (these are enum types)!
+X-Purism-FormFactor=Workstation;Mobile;
 DBusActivatable=true
-MimeType=audio/x-mpegurl;application/x-ogg;application/ogg;application/x-flac;audio/x-flac;audio/x-mp3;audio/x-mpeg;audio/mpeg;audio/x-vorbis+ogg;
+MimeType=audio/wav;audio/webm;audio/x-aac;audio/x-aiff;audio/x-ape;audio/x-flac;audio/x-it;audio/x-m4a;audio/x-m4b;audio/x-matroska;audio/x-mod;audio/x-mp1;audio/x-mp2;audio/x-mp3;audio/x-mpg;audio/x-mpeg;audio/x-mpegurl;audio/x-ms-asf;audio/x-ms-asx;audio/x-ms-wax;audio/x-ms-wma;audio/x-musepack;audio/x-opus+ogg;audio/x-pn-aiff;audio/x-pn-au;audio/x-pn-realaudio;audio/x-pn-realaudio-plugin;audio/x-pn-wav;audio/x-pn-windows-acm;audio/x-realaudio;audio/x-real-audio;audio/x-s3m;audio/x-sbc;audio/x-scpls;audio/x-shorten;audio/x-speex;audio/x-stm;audio/x-tta;audio/x-wav;audio/x-wavpack;audio/x-vorbis;audio/x-vorbis+ogg;audio/x-xm;
