--- a/data/io.bassi.Amberol.appdata.xml.in.in
+++ b/data/io.bassi.Amberol.appdata.xml.in.in
@@ -11,10 +11,22 @@
       want to play music available on your local system then Amberol is the
       music player you are looking for.
     </p>
+    <p>Current features:</p>
+    <ul>
+      <li>adaptive UI</li>
+      <li>UI recoloring using the album art</li>
+      <li>drag and drop support to queue songs</li>
+      <li>shuffle and repeat</li>
+      <li>MPRIS integration</li>
+    </ul>
   </description>
   <screenshots>
-    <screenshot type="source">https://www.bassi.io/~ebassi/amberol-1.png</screenshot>
-    <screenshot type="source">https://www.bassi.io/~ebassi/amberol-2.png</screenshot>
+    <screenshot>
+      <image>https://www.bassi.io/~ebassi/amberol-1.png</image>
+    </screenshot>
+    <screenshot>
+      <image>https://www.bassi.io/~ebassi/amberol-2.png</image>
+    </screenshot>
   </screenshots>
   <launchable type="desktop-id">@APPLICATION_ID@.desktop</launchable>
   <url type="homepage">https://gitlab.gnome.org/ebassi/amberol</url>
@@ -23,6 +35,18 @@
   <developer_name>Emmanuele Bassi</developer_name>
   <update_contact>ebassi_at_gnome.org</update_contact>
   <translation type="gettext">amberol</translation>
+  <custom>
+    <value key="Purism::form_factor">workstation</value>
+    <value key="Purism::form_factor">mobile</value>
+  </custom>
+  <requires>
+    <display_length compare="ge">360</display_length>
+  </requires>
+  <recommends>
+    <control>keyboard</control>
+    <control>pointing</control>
+    <control>touch</control>
+  </recommends>
   <releases>
     <release version="0.3.0" type="development" date="2022-04-15"/>
     <release version="0.2.1" type="development" date="2022-04-11"/>
