audio: Use async save for the cached cover
We should not replace the cached cover art if we already have it, and we
should save the cache asynchronously, to avoid blocking even more during
the song loading phase.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 
 [dependencies]
 color-thief = "0.2.1"
-gdk-pixbuf = "0.15"
+gdk-pixbuf = { version = "0.15", features = ["v2_36"] }
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 gtk = { version = "0.4", package = "gtk4", features = ["v4_6"] }
 gtk-macros = "0.3"
