audio: Add waveform generator
This object type handles the GStreamer pipeline needed to extract the
levels out of a file at a given URI.

--- a/src/meson.build
+++ b/src/meson.build
@@ -44,6 +44,7 @@ rust_sources = files(
   'audio/shuffle.rs',
   'audio/song.rs',
   'audio/state.rs',
+  'audio/waveform_generator.rs',
   'config.rs',
   'cover_picture.rs',
   'drag_overlay.rs',
