--- a/data/meson.build
+++ b/data/meson.build
@@ -52,6 +52,9 @@ install_data('io.bassi.Amberol.gschema.xml',
   install_dir: get_option('datadir') / 'glib-2.0/schemas',
 )
 
+# Compile schemas locally, so we can run uninstalled under a devenv
+gnome.compile_schemas()
+
 compile_schemas = find_program('glib-compile-schemas', required: false)
 if compile_schemas.found()
   test('Validate schema file',
