--- a/data/io.bassi.Amberol.appdata.xml.in.in
+++ b/data/io.bassi.Amberol.appdata.xml.in.in
@@ -48,6 +48,17 @@
     <control>touch</control>
   </recommends>
   <releases>
+    <release version="0.4.3" date="2022-04-27">
+      <description>
+        <p>Bugs never end, and so does bug squashing.</p>
+        <ul>
+          <li>Fix a crash when manually advancing through the playlist</li>
+          <li>Make the waveform scrubber more legible</li>
+          <li>Keep the UI state more consistent when toggling the playlist</li>
+        </ul>
+        <p>Many, many thanks to all of those who opened an issue after the 0.4.0 release!</p>
+      </description>
+    </release>
     <release version="0.4.2" date="2022-04-22">
       <description>
         <p>Fix a slight visual artefact in the playlist</p>
