Move the playlist widgets into their own composite type
Keep the window UI definition file easier to maintain.

--- a/src/meson.build
+++ b/src/meson.build
@@ -51,6 +51,7 @@ rust_sources = files(
   'i18n.rs',
   'main.rs',
   'playback_control.rs',
+  'playlist_view.rs',
   'queue_row.rs',
   'song_details.rs',
   'utils.rs',
