--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ pretty_env_logger = "0.4"
 rand = "0.8.5"
 regex = "1.3.4"
 sha2 = "0.10.2"
+srgb = "0.3"
 
 [dependencies.adw]
 package = "libadwaita"
