--- a/data/io.bassi.Amberol.appdata.xml.in.in
+++ b/data/io.bassi.Amberol.appdata.xml.in.in
@@ -22,16 +22,16 @@
   </description>
   <screenshots>
     <screenshot>
-      <image>https://www.bassi.io/~ebassi/amberol/screenshots/0.5/amberol-1.png</image>
+      <image>https://www.bassi.io/~ebassi/amberol/screenshots/0.6/amberol-1.png</image>
     </screenshot>
     <screenshot>
-      <image>https://www.bassi.io/~ebassi/amberol/screenshots/0.5/amberol-2.png</image>
+      <image>https://www.bassi.io/~ebassi/amberol/screenshots/0.6/amberol-2.png</image>
     </screenshot>
     <screenshot>
-      <image>https://www.bassi.io/~ebassi/amberol/screenshots/0.5/amberol-3.png</image>
+      <image>https://www.bassi.io/~ebassi/amberol/screenshots/0.6/amberol-3.png</image>
     </screenshot>
     <screenshot>
-      <image>https://www.bassi.io/~ebassi/amberol/screenshots/0.5/amberol-4.png</image>
+      <image>https://www.bassi.io/~ebassi/amberol/screenshots/0.6/amberol-4.png</image>
     </screenshot>
   </screenshots>
   <launchable type="desktop-id">@APPLICATION_ID@.desktop</launchable>
@@ -54,6 +54,19 @@
     <control>touch</control>
   </recommends>
   <releases>
+    <release version="0.6.0" date="2022-05-06">
+      <description>
+        <p>New round of UI touch-ups, to make Amberol more readable.</p>
+        <ul>
+          <li>Improve the playlist management through a selection mode switch</li>
+          <li>Add localization for various languages</li>
+          <li>Make the text and controls more legible</li>
+          <li>Improve the MPRIS integration</li>
+          <li>Better support for right-to-left text locales</li>
+          <li>Allow disabling UI recoloring</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.5.0" date="2022-04-29">
       <description>
         <p>Last UI change for a while, I promise.</p>
