--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ once_cell = "1.10"
 pretty_env_logger = "0.4"
 rand = "0.8.5"
 regex = "1.3.4"
+serde_json = "1.0"
 sha2 = "0.10.2"
 srgb = "0.3"
 
