--- a/data/io.bassi.Amberol.appdata.xml.in.in
+++ b/data/io.bassi.Amberol.appdata.xml.in.in
@@ -54,6 +54,17 @@
     <control>touch</control>
   </recommends>
   <releases>
+    <release version="0.6.2" date="2022-05-20">
+      <description>
+        <p>Another round of small, papercut issue fixes</p>
+        <ul>
+          <li>Accessibility fixes all across the board</li>
+          <li>Better key navigation and shortcuts</li>
+          <li>Improve the consistency of the UI</li>
+          <li>Speed up the song loading</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.6.1" date="2022-05-09">
       <description>
         <p>Papercut fixes for the initial landing page and the playlist</p>
