Add CoverCache object
A simple cache object that stores the cover art using the album name and
album artist, if available, as the key. This way we can share the same
cover art texture across songs from the same album.

--- a/src/meson.build
+++ b/src/meson.build
@@ -35,6 +35,7 @@ run_command(
 rust_sources = files(
   'application.rs',
   'audio/controller.rs',
+  'audio/cover_cache.rs',
   'audio/gst_backend.rs',
   'audio/inhibit_controller.rs',
   'audio/mod.rs',
