--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-ashpd = { version = "0.3", features = ["feature_gtk4"] }
 color-thief = "0.2.1"
 gdk-pixbuf = { version = "0.15", features = ["v2_36"] }
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
@@ -24,6 +23,9 @@ regex = "1.3.4"
 serde_json = "1.0"
 sha2 = "0.10.2"
 srgb = "0.3"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+ashpd = { version = "0.3", features = ["feature_gtk4"] }
 
 [dependencies.adw]
 package = "libadwaita"
