--- a/data/io.bassi.Amberol.appdata.xml.in.in
+++ b/data/io.bassi.Amberol.appdata.xml.in.in
@@ -54,6 +54,11 @@
     <control>touch</control>
   </recommends>
   <releases>
+    <release version="0.8.1" date="2022-06-24">
+      <description>
+        <p>Bug fixes and UI improvements</p>
+      </description>
+    </release>
     <release version="0.8.0" date="2022-06-17">
       <description>
         <p>More features for less memory!</p>
