Implemented fuzzy searching
This implements two new types, `search::FuzzyFilter` and
`sort::FuzzySorter`, which are bound to the ListModel in window.rs.
These allow for fuzzy searching to occur and will first remove songs
without a match, and then sort them so the most relevant match is
first.

It uses the fuzzy-matcher crate to implement this.

--- a/src/meson.build
+++ b/src/meson.build
@@ -54,7 +54,9 @@ rust_sources = files(
   'playback_control.rs',
   'playlist_view.rs',
   'queue_row.rs',
+  'search.rs',
   'song_details.rs',
+  'sort.rs',
   'utils.rs',
   'volume_control.rs',
   'waveform_view.rs',
