--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ regex = "1.3.4"
 serde_json = "1.0"
 sha2 = "0.10.2"
 srgb = "0.3"
+fuzzy-matcher = "0.3.7"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ashpd = { version = "0.3", features = ["feature_gtk4"] }
