--- a/data/io.bassi.Amberol.appdata.xml.in.in
+++ b/data/io.bassi.Amberol.appdata.xml.in.in
@@ -54,6 +54,18 @@
     <control>touch</control>
   </recommends>
   <releases>
+    <release version="0.9.0" date="2022-08-05">
+      <description>
+        <p>Searchings deserves to be fuzzy</p>
+        <ul>
+          <li>Support fuzzy matching when searching inside the playlist</li>
+          <li>Add a key shortcut for toggling shuffle</li>
+          <li>Allow opening folders with Amberol</li>
+          <li>Lots of translation updates</li>
+          <li>Bug fixes and performance improvements</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.8.1" date="2022-06-24">
       <description>
         <p>Bug fixes and UI improvements</p>
