--- a/data/io.bassi.Amberol.desktop.in.in
+++ b/data/io.bassi.Amberol.desktop.in.in
@@ -8,7 +8,7 @@ Terminal=false
 Type=Application
 Categories=GNOME;GTK;Music;Audio;AudioVideo;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
-Keywords=music;sound;player;media;audio;playlist;
+Keywords=music;player;media;audio;playlist;
 StartupNotify=true
 X-SingleMainWindow=true
 X-Purism-FormFactor=Workstation;Mobile;
