Drop the Devel manifest
We don't really need it; we can use the default manifest and enable
development there.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ flatpak:
     APP_ID: "io.bassi.Amberol.Devel"
     BUNDLE: "io.bassi.Amberol.Devel.flatpak"
     FLATPAK_MODULE: "amberol"
-    MANIFEST_PATH: "io.bassi.Amberol.Devel.json"
+    MANIFEST_PATH: "io.bassi.Amberol.json"
     RUNTIME_REPO: "https://nightly.gnome.org/gnome-nightly.flatpakrepo"
 
 rust-fmt:
