--- a/data/io.bassi.Amberol.appdata.xml.in.in
+++ b/data/io.bassi.Amberol.appdata.xml.in.in
@@ -54,6 +54,20 @@
     <control>touch</control>
   </recommends>
   <releases>
+    <release version="0.9.2" date="2022-12-10">
+      <description>
+        <p>It's been a while!</p>
+        <ul>
+          <li>Allow dragging on the waveform to seek inside a song</li>
+          <li>Use the latest libadwaita about dialog</li>
+          <li>Use the latest lofty for improved song metadata detection</li>
+          <li>Detect more external cover file names</li>
+          <li>Small improvements in the waveform animation</li>
+          <li>Remove the unnecessary notification for the background portal</li>
+          <li>Translation updates</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.9.1" date="2022-08-30">
       <description>
         <p>Small paper cuts, and ReplayGain</p>
