--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2018"
 
 [dependencies]
 color-thief = "0.2.1"
-gdk-pixbuf = { version = "0.15", features = ["v2_36"] }
+gdk-pixbuf = { version = "0.16", features = ["v2_42"] }
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
-gtk = { version = "0.4.8", package = "gtk4", features = ["v4_6"] }
+gtk = { version = "0.5.5", package = "gtk4", features = ["v4_8"] }
 gtk-macros = "0.3"
 lofty = "0.9.0"
 log = "0.4"
@@ -26,21 +26,21 @@ srgb = "0.3"
 fuzzy-matcher = "0.3.7"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-ashpd = { version = "0.3", features = ["feature_gtk4"] }
+ashpd = {version = "0.4.0-alpha.1", features = ["gtk4"]}
 
 [dependencies.adw]
 package = "libadwaita"
-version = "0.2.0-alpha.2"
+version = "0.2"
 features = ["v1_2"]
 
 [dependencies.gst]
 package = "gstreamer"
-version = "0.18"
+version = "0.19"
 
 [dependencies.gst-audio]
 package = "gstreamer-audio"
-version = "0.18"
+version = "0.19"
 
 [dependencies.gst-player]
 package = "gstreamer-player"
-version = "0.18"
+version = "0.19"
