--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ srgb = "0.3"
 fuzzy-matcher = "0.3.7"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-ashpd = {version = "0.4.0-alpha.4", features = ["gtk4"]}
+ashpd = {version = "0.4.0", features = ["gtk4"]}
 
 [dependencies.adw]
 package = "libadwaita"
