--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ sha2 = "0.10.2"
 srgb = "0.3"
 fuzzy-matcher = "0.3.7"
 
-[target.'cfg(target_os = "linux")'.dependencies]
+[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
 ashpd = {version = "0.4.0", features = ["gtk4"]}
 
 [dependencies.adw]
