--- a/data/io.bassi.Amberol.appdata.xml.in.in
+++ b/data/io.bassi.Amberol.appdata.xml.in.in
@@ -55,6 +55,16 @@
     <control>touch</control>
   </recommends>
   <releases>
+    <release version="0.10.3" date="2023-05-23">
+      <description>
+        <p>Bug fixes and small UI improvements</p>
+        <ul>
+          <li>Ensure that the waveform display is always centered for short songs</li>
+          <li>Fix display of non-square cover art</li>
+          <li>Translation updates</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.10.2" date="2023-04-28">
       <description>
         <p>The bug fixing comes in waves</p>
