--- a/meson.build
+++ b/meson.build
@@ -8,14 +8,14 @@ project('amberol', 'rust',
   default_options: [ 'warning_level=2', ],
 )
 
-dependency('gtk4', version: '>= 4.6.0')
-dependency('libadwaita-1')
-dependency('gstreamer-1.0', version: '>= 1.16')
-dependency('gstreamer-audio-1.0', version: '>= 1.16')
-dependency('gstreamer-player-1.0', version: '>= 1.16')
-dependency('gstreamer-plugins-base-1.0', version: '>= 1.16')
-dependency('gstreamer-plugins-bad-1.0', version: '>= 1.16')
-dependency('gstreamer-bad-audio-1.0', version: '>= 1.16')
+dependency('gtk4', version: '>= 4.10.0')
+dependency('libadwaita-1', version: '>= 1.2')
+dependency('gstreamer-1.0', version: '>= 1.20')
+dependency('gstreamer-audio-1.0', version: '>= 1.20')
+dependency('gstreamer-player-1.0', version: '>= 1.20')
+dependency('gstreamer-plugins-base-1.0', version: '>= 1.20')
+dependency('gstreamer-plugins-bad-1.0', version: '>= 1.20')
+dependency('gstreamer-bad-audio-1.0', version: '>= 1.20')
 
 i18n = import('i18n')
 gnome = import('gnome')
