metadata: Add translate and vcs-browser URLs
These URLs are useful for the application centers like GNOME Software and
apps.gnome.org (https://apps.gnome.org/en/app/io.bassi.Amberol/) website.

More information: https://www.freedesktop.org/software/appstream/docs/chap-Metadata.html#tag-url

--- a/data/io.bassi.Amberol.appdata.xml.in.in
+++ b/data/io.bassi.Amberol.appdata.xml.in.in
@@ -39,6 +39,8 @@
   <url type="bugtracker">https://gitlab.gnome.org/World/amberol/-/issues</url>
   <url type="donation">https://ko-fi.com/emmanueleb</url>
   <url type="contact">https://matrix.to/#/#amberol:gnome.org</url>
+  <url type="vcs-browser">https://gitlab.gnome.org/World/amberol</url>
+  <url type="translate">https://l10n.gnome.org/module/amberol/</url>
   <developer_name>Emmanuele Bassi</developer_name>
   <update_contact>ebassi_at_gnome.org</update_contact>
   <translation type="gettext">amberol</translation>
